ui(master) Hovering About tooltip added for flavourrr

--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
             ></path>
           </svg>
         </a>
+        <div class="tooltip">
+          <h3 class="tooltip-trigger">taylor wilkinson</h3>
+          <div class="tooltip-container">
+            <p class="tooltip-text">
+              Taylor is a front-end developer living in Vancouver, BC, on the
+              unceded traditional territories of the xʷməθkʷəy̓əm (Musqueam),
+              Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh) Nations.
+            </p>
+            <p class="tooltip-text">
+              She loves Dungeons and Dragons, has a cat named Percival, and is a
+              sucker for karaoke.
+            </p>
+          </div>
+        </div>
       </div>
 
       <p class="bold">Oh gosh. Oh geez. You can't be here right now!</p>
