Bubblegum Color Palette

--- a/index.html
+++ b/index.html
@@ -1,30 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Taylor Wilkinson</title>
-
+    <title>Taylor Wilkinson: front end developer</title>
+    <meta
+      name="description"
+      content="Taylor Wilkinson is a frontend developer"
+    />
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="css/under.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i"
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <section>
-      <h1 style="text-align: center">under construction</h1>
-      <p style="text-align: center">see you soon</p>
-      <p class="small">no peaking</p>
-      <p class="smaller">seriously!!!!! no peaking!!!!!!!!!!!!!!</p>
-    </section>
+    <nav class="navigation">
+      <ul class="nav-list">
+        <li class="nav-item"><a href="/">Taylor W</a></li>
+        <li class="nav-item"><a href="#experience">experience</a></li>
+        <li class="nav-item"><a href="#about">about</a></li>
+        <li class="nav-item"><a href="#contact">contact</a></li>
+      </ul>
+    </nav>
+    <div class="content home">
+      <div class="home-copy-container">
+        <!-- <p class="eyebrow">web developer; cat mom; dungeon master</p> -->
+        <h1 class="h1">Taylor Wilkinson</h1>
+        <h2>is a front-end developer</h2>
+        <p>
+          If you’re looking for a creative front-end developer who is passionate
+          about your end user’s experience, promoting web accessibility for all,
+          and is excited to collaborate cross-functionally to build responsive
+          and performant web experiences, then look no further!
+        </p>
+        <div id="acknowledgment">
+          <p>
+            I live and work on the unceded territories of the xʷməθkʷəy̓əm
+            (Musqueam), Sḵwx̱wú7mesh (Squamish), and səlilwətaɬ (Tsleil-Waututh)
+            Nations, also known as Vancouver, BC.
+          </p>
+        </div>
+      </div>
+      <div class="home-img-container">
+        <img src="./img/extreme-chill.png" />
+      </div>
+      <div class="about-copy-container">
+        <h2>about</h2>
+        <p>
+          Hello there! I am a normal human woman (definitely not a nursery of
+          raccoons in a human suit) that codes for a living. My career in web
+          development began in 2013 when I was playing with custom CSS on my
+          secret One Direction tumblr blog. Once I realized “Wow, people do this
+          for a living!” (“this” being coding and web design, not reposting
+          2010s celeb photos), it propelled me to apply to SFU’s SIAT program -
+          an interdisciplinary school that covered development, design, and
+          media. I graduated in 2019 with my BSc. in Interactive Systems.
+        </p>
+        <p>
+          Fast forward to now, I am working as a web developer in-house on a
+          marketing team, working with internal stakeholders and marketers to
+          maintain their website and manage web content. I still love playing
+          with CSS to this day. Other tools and stacks I’ve used include
+          Javascript, HTML5, React, Gatsby.js, Vue.js, and GraphQL.
+        </p>
+        <p>
+          Outside of work, I’m a zealous Dungeons & Dragons player and game
+          master. I’m a hobby photographer, cat parent, tiktok enjoyer, and
+        </p>
+      </div>
+    </div>
+
+    <div id="experience" class="content">
+      <h2>experience</h2>
+      <div class="experience-block">
+        <h3>Later</h3>
+        <p>Web Developer</p>
+        <p>NOVEMBER 2021 - PRESENT, Web Developer</p>
+        <p>NOVEMBER 2020 - NOVEMBER 2021, Junior Web Developer</p>
+        <ul>
+          <li>
+            Works on the Web Team under the Demand Generation department to
+            maintain Later’s marketing website
+          </li>
+          <li>
+            Collaborates with stakeholders to execute web requests for marketing
+            projects, initiatives, and target achievement, including
+            coordinating new page builds and content updates for go-to-market
+            campaigns; integrating Email Marketing lead generation forms; and
+            building a Spanish microsite for Later’s pilot internationalization
+            project
+          </li>
+          <li>
+            Assisted in building later.com’s Contentful CMS platform by
+            developing new components, migrating the first phase of content, and
+            managing contractors in charge of building specific components
+          </li>
+          <li>
+            Assisted in migrating later.com from a Middleman web stack to the
+            current stack utilizing Gatsby (a React-based framework), GraphQL,
+            and Contentful
+          </li>
+          <li>
+            Performed A/B tests with stakeholders from Product, Product
+            Marketing, and Customer Success, including determining the efficacy
+            of messaging in driving free trial sign-ups and whether
+            deprioritizing free plan mentions reduced overall sign-ups
+          </li>
+        </ul>
+      </div>
+      <div class="experience-block">
+        <h3>Corvum</h3>
+        <p>Front-End Developer & Designer</p>
+        <p>DECEMBER 2019 - NOVEMBER 2020</p>
+        <ul>
+          <li>
+            Worked on the Development team to maintain CORVUM’s web application,
+            focusing on the design, building, and refactoring of client-facing
+            elements
+          </li>
+          <li>
+            Designed and built the front end for the web portal’s Dashboard, and
+            led the design and development of later iterations
+          </li>
+          <li>
+            Designed and built the new WordPress website for CORVUM with the
+            goal of better representing the brand and providing resources for
+            potential and existing customers
+          </li>
+          <li>
+            Acted as the primary UX and visual designer on staff, and so was
+            responsible for the visual design of new features and product
+            improvements in the web application, along with creating visual
+            assets for the company’s website and social media platforms
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
